# voiceclone

./: .env  .gitignore  bak  language.py  language2.py  processor.py  pyproject.toml  transcription.txt  worker.py  worker_qwen.py  worker_whisper.py  ws.py  x.sh
examples/: 1.json  2.json  user_input.py  user_input_select.py  user_input_timeout.py
